<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:gravity="center"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:background="@drawable/logo_mobilelabs"
            tools:ignore="MissingConstraints"></ImageView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="80dp"
                android:paddingBottom="10dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txtFullName"
                        android:textSize="16sp"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutFullName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintFullName"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEditFullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_medium"
                            android:inputType="textPersonName">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txtPhone"
                        android:textSize="16sp"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutPhoneNumber"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintPhone"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEditPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_medium"
                            android:inputType="phone">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txtUsername"
                        android:textSize="16sp"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutUsername"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintUsername"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEditUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_medium">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txtPassword"
                        android:textSize="16sp"></TextView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintPassword"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEditPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_medium"
                            android:inputType="textPassword">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="20dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="120dp"
                        android:layout_height="55dp"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/btnSignUp"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        app:backgroundTint="@color/fontColor">

                    </com.google.android.material.button.MaterialButton>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txtBackTo"
                        android:textSize="16sp"></TextView>

                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/txtLogin"
                        android:textColor="@color/color0"
                        android:textSize="16sp">

                    </TextView>
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>